# llmx-scout-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: keywords.txt  scout.toml
docs/: architecture-options.md  source-pack-schema.md  specification.md  upstream-context.md
docs/inspiration/: TrendRadar-notes.md
fixtures/calibration/: 001-erdos-chatgpt.yaml  002-openai-privacy-filter.yaml  003-eden-ai-alternative.yaml  004-datalog-gpu.yaml  005-reddit-deepseek-kv.yaml  README.md
prompts/: scoring.md
scripts/: bootstrap.sh  com.llmxfactors.scout.discover.plist  com.llmxfactors.scout.discover.plist.template  install_launchd.sh  uninstall_launchd.sh
src/scout/: calibration.py  cli.py  config.py  models.py
src/scout/delivery/: git.py
src/scout/filter/: keywords.py  scoring.py
src/scout/harvest/: comments.py  fulltext.py  packer.py
src/scout/sources/: base.py  github.py  hacker_news.py  reddit.py
src/scout/store/: db.py  schema.sql
src/scout/utils/: retry.py  slug.py  url_norm.py
tests/: test_calibration.py  test_config.py  test_delivery.py  test_github.py  test_hacker_news.py  test_keywords.py  test_models.py  test_packer.py  test_reddit.py  test_scoring.py  test_slug.py  test_store.py  test_url_norm.py
tests/fixtures/: github_trending.html
