[project]
name = "llmx-scout-agent"
version = "0.1.0"
description = "Daily scout agent that mines high-signal AI topics and outputs standardized source packs."
requires-python = ">=3.12"
authors = [{ name = "LE PPW" }]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.7",
    "structlog>=24.1",
    "trafilatura>=1.12",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.45"]

[project.scripts]
scout = "scout.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scout"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = [
    "E501",   # line length — handled by formatter
    "RUF001", # ambiguous unicode in strings — we use Chinese intentionally
    "RUF002", # ambiguous unicode in docstrings — same
    "RUF003", # ambiguous unicode in comments — same
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
